fix broken css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,10 +11,6 @@
   opacity: 0.8;
 }
 
-.logo:hover {
-  /* opacity: 1; */
-}
-
 input,
 button,
 textarea,
@@ -29,7 +25,7 @@ select {
   white-space: pre-wrap;
   font-family: monospace;
   display: flex;
-  align-items: flex-end;
+  align-items: end;
   padding-right: 2rem;
 }
 
@@ -45,16 +41,12 @@ select {
   transform: scale(-1, 1);
   order: -1;
 }
-.event:nth-of-type(2n) .eventAnnotation svg {
-  /* transform: scale(-1, 1); */
-  /* order: -1; */
-}
+
 .eventPayload {
   border: 2px #d0d3d4 dotted;
   background: white;
   margin: 0;
   white-space: pre-wrap;
-  /* background: #fafafa; */
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 0.6rem;
@@ -66,7 +58,6 @@ html,
 body {
   margin: 0;
   color: #25303e;
-  /* background: #f0f0f0; */
   font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, sans-serif;
   font-size: 14px;
   overflow-x: hidden;
@@ -82,7 +73,6 @@ body {
   justify-content: center;
   padding: 1rem;
   background: red;
-  /* clip-path: polygon(0% 100%, 40% 50%, 100% 0, 100% 100%); */
   height: 10vw;
 
   transition: 0.1s all ease-in;
@@ -112,16 +102,11 @@ main {
 .quizHeader {
   margin-top: 2rem;
   text-align: center;
-  /* background: rgba(255, 255, 255, 0.5); */
 }
 
 .main-panel {
   font-size: 1.2rem;
   padding-bottom: 3rem;
-  /* background-image: url("/logomark.svg"); */
-  /* background-repeat: no-repeat; */
-  /* background-position: right 1.5rem top; */
-  /* background-size: 5em; */
 }
 
 a {
@@ -299,8 +284,6 @@ button:hover {
   }
 }
 
-/* background: linear-gradient(10deg, #262558, #51368d); */
-
 .surveySelection {
   margin-top: 8px;
   display: flex;
@@ -353,20 +336,8 @@ button[type="submit"] {
   margin-top: 8px;
 }
 
-/* body { */
-/*   background: linear-gradient( */
-/*     30deg, */
-/*     transparent 95%, */
-/*     #262558 95%, */
-/*     #51368d 100% */
-/*   ); */
-/*   height: 100vh; */
-/*   background-attachment: fixed; */
-/* } */
-
 @media screen and (min-width: 880px) {
   body {
-    /*   ); */
     background: linear-gradient(
         30deg,
         #262558,
@@ -383,15 +354,14 @@ button[type="submit"] {
     white-space: pre-wrap;
     font-family: monospace;
     display: flex;
-    align-items: flex-end;
-    /* display: none; */
+    align-items: end;
     margin-left: -4rem;
     padding-left: 1.75rem;
     font-size: 1.5rem;
     padding-bottom: 2.5rem;
   }
 
-  .logoheader: {
+  .logoheader {
     max-height: 300px;
     height: 300px;
   }
@@ -462,9 +432,6 @@ button[type="submit"] {
     left: 0;
   }
 
-  /* body { */
-  /*   overflow: hidden; */
-  /* } */
   main {
     display: grid;
     grid-gap: 3vw;
@@ -508,10 +475,6 @@ button[type="submit"] {
     padding-right: 3rem;
   }
 
-  .event: {
-    margin-top: 45px;
-  }
-
   .event:nth-of-type(1) {
     animation: fadein 2s;
     display: block;
@@ -520,16 +483,6 @@ button[type="submit"] {
   .event:nth-of-type(2) {
     animation: fadeout 2s;
     display: block;
-  }
-
-  /* .event.event:nth-of-type(1) .eventAnnotation { */
-  /*   animation: fadein 1.5s; */
-  /* } */
-  .event + .event {
-    /* display: none; */
-    /* opacity: 0; */
-    /* animation: fadeout 1.5s; */
-    opacity: 0.5;
   }
 
   .event:hover {
